Fix scrolling on mobile for all pages

--- a/css/main.css
+++ b/css/main.css
@@ -1,16 +1,13 @@
-.image { 
-   position: relative; 
-   width: 100%; /* for IE 6 */
-   padding: 0px;
-   margin: 0px;
-}
-
 html { 
-  background: url(../images/penguins.jpg) no-repeat center center fixed; 
-  -webkit-background-size: cover;
-  -moz-background-size: cover;
-  -o-background-size: cover;
-  background-size: cover;
+   background-color: #B1C3E5;
+   background: url(../images/penguins.jpg) no-repeat center center fixed; 
+   -webkit-background-size: cover;
+   -moz-background-size: cover;
+   -o-background-size: cover;
+   background-size: cover;
+   height: 100%;
+   width: 100%;
+   transition: height 0.4s
 }
 
 h2 { 
@@ -46,18 +43,21 @@ h1 {
 }
 
 hr.sep {
+   color: black;
    border-top: 2px solid;
    border-right: none;
    border-left: none;
    border-bottom: none;
-   width: 104%;
-   margin-left: -2%;
+   width: calc(100% + 24px);
+   margin-left: -12px;
    margin-top: 0px
 }
 
 hr.sep:before {
+   color: black;
    display: block;
    content: "";
+   width: calc(100% - 28px);
    margin-top: -12px;
    margin-left: 12px;
    margin-right: 12px;
@@ -66,35 +66,33 @@ hr.sep:before {
    border-right: 2px solid;
 }
 
+.watermark {
+   position: static;
+   width: 88%;
+   margin: auto;
+   height: auto;
+   min-height: 100vh;
+   display: block;
+   background-image: url(../images/tiled.png);
+   background-position: 0px 0px;
+   background-repeat: repeat-y;
+   background-attachment: scroll;
+   -webkit-background-size: 100%;
+   -moz-background-size: 100%;
+   -o-background-size: 100%;
+   background-size: 100%;
+}
+
 .content {
    position: absolute;
    top: 0px;
    left: 8%;
-   height: auto;
-   min-height: 100%;
    width: 84%;
-   background-color: #ffffff;
-   margin: auto;
-   display: block;
-}
-
-.watermark {
-   position: absolute;
-   top: 0px;
-   left: 6%;
-   width: 88%;
    margin: auto;
    height: auto;
    display: block;
-   background-image: url(../images/CrestBackgroundSmall.png);
-   background-position: 0px 0px;
-   background-repeat: repeat;
-   background-attachment: scroll;
-   -webkit-background-size: 16.6666%;
-   -moz-background-size: 16.6666%;
-   -o-background-size: 16.6666%;
-   background-size: 16.6666%;
-   height: 100%;
+   min-height: 100%;
+   background-color: #ffffff;
 }
 
 .banner {
@@ -106,7 +104,7 @@ hr.sep:before {
 
 .navbar {
    display: block;
-   margin: 30px;
+   margin-bottom: 30px;
    margin-top: 11px;
    text-align: center;
    height: auto;
@@ -138,7 +136,6 @@ hr.sep:before {
    margin: auto;
    width: 100%;
    border-spacing: 15px;
-   overflow: 
 }
 
 .col {
@@ -170,22 +167,22 @@ a:link {
    text-decoration: none;
 }
 
-.cell:hover {
-   opacity: 1;
-}
-
 .imagepanel {
    max-width: 100%;
    max-height: 100%;
    overflow: hidden;
 }
 
-.backgroundimg {
-   max-width: 100vw;
-   /*max-height: 100vh;*/
-   position: absolute;
-   top: 0px;
-   left: 0px;
+@media only screen and (max-width: 600px) {
+   .col {
+      width: 100%;
+      display: block;
+   }
+
+   .widecol {
+      width: 100%;
+      display: block;
+   }
 }
 
 @font-face {
